[gd_scene load_steps=16 format=3 uid="uid://be66wxyvfxkdr"]

[ext_resource type="Script" uid="uid://cv3l1an3nre4g" path="res://script/menu.gd" id="1_fyqef"]
[ext_resource type="FontFile" uid="uid://cvv5f6lv4eikk" path="res://super-mario.otf" id="3_gdt2y"]
[ext_resource type="Texture2D" uid="uid://dvcobyd0koon1" path="res://sprite/cursor.png" id="4_p7vwb"]
[ext_resource type="Texture2D" uid="uid://ce8ttuhhgag4x" path="res://sprite/logo.png" id="4_wm3ai"]

[sub_resource type="ViewportTexture" id="ViewportTexture_gdt2y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cgfq5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7dvkv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8dubc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p7vwb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ktti3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vsw8r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_km7eu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5a6dn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ljdde"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oy07q"]

[node name="ui" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fyqef")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
z_index = 1000
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -54.0
offset_top = -101.0
offset_right = 70.0
grow_horizontal = 2
grow_vertical = 0

[node name="1 player" type="Button" parent="CanvasLayer/VBoxContainer"]
z_index = 1000
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 0)
theme_override_fonts/font = ExtResource("3_gdt2y")
theme_override_font_sizes/font_size = 8
theme_override_icons/icon = SubResource("ViewportTexture_gdt2y")
theme_override_styles/normal = SubResource("StyleBoxEmpty_cgfq5")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_7dvkv")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8dubc")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_p7vwb")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ktti3")
toggle_mode = true
keep_pressed_outside = true
text = "1 PLAYER GAME"
icon = ExtResource("4_p7vwb")

[node name="2 player" type="Button" parent="CanvasLayer/VBoxContainer"]
z_as_relative = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 0)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_gdt2y")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_vsw8r")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_km7eu")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5a6dn")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ljdde")
theme_override_styles/focus = SubResource("StyleBoxEmpty_oy07q")
text = "2 PLAYER GAME"
icon = ExtResource("4_p7vwb")

[node name="Panel" type="Panel" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="top-" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_gdt2y")
theme_override_font_sizes/font_size = 8
text = " TOP-"
horizontal_alignment = 1

[node name="score" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_gdt2y")
theme_override_font_sizes/font_size = 8
text = "000000"
horizontal_alignment = 1

[node name="logotitle" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(129, 80)
texture = ExtResource("4_wm3ai")

[connection signal="mouse_entered" from="CanvasLayer/VBoxContainer/1 player" to="." method="_on__player_mouse_entered1"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/1 player" to="." method="_on__player_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/VBoxContainer/2 player" to="." method="_on__player_mouse_entered2"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/2 player" to="." method="_on__player_pressed2"]
